# robota-core

./: .gitignore  CHANGES.md  Dockerfile  LICENCE  README.md  conftest.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build-lint-test.yml
docs/: CODEOWNERS  README.md
docs/source/: conf.py  data_sources.rst  index.rst  modules.rst  robota_config.rst  robota_core.rst
robota_core/: __init__.py  attendance.py  ci.py  commit.py  config_readers.py  data_server.py  github_tools.py  gitlab_tools.py  issue.py  logic.py  merge_request.py  remote_provider.py  repository.py  string_processing.py
robota_core/commit_visualisation/: commit_visualisation.py
robota_core/commit_visualisation/test/: test_commit_visualisation.py
robota_core/tests/: test_artefact_urls.py  test_config_readers.py  test_gitlab_tools.py  test_issue_handling.py  test_robota_tools.py  test_string_processing.py
robota_core/tests/sample_files/: another_config.txt  config.yaml
