[project]
name = "robota_core"
version = "2.3.3-alpha"
authors = [
  { name="University of Manchester", email="suzanne.m.embury@manchester.ac.uk" },
]
description = "A package to retrieve version controlled software projects from GitHub and GitLab, for further analysis."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

dependencies = ['requests',
                'jinja2',
                'python-gitlab>=4.2.0',
                'PyYaml>=5.1',
                'pytest',
                'gitpython',
                'python-jenkins',
                'python-dateutil',
                'bleach',
                'Markdown',
                'PyGithub',
                'loguru',
                'dateparser']

[project.urls]
Homepage = "https://gitlab.cs.man.ac.uk/institute-of-coding/robota-core"
Issues = "https://gitlab.cs.man.ac.uk/institute-of-coding/robota-core/-/issues"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
