[tool.poetry]
name = "robota_core"
version = "2.3.4-alpha"
description = "A package to retrieve version controlled software projects from GitHub and GitLab, for further analysis."
authors = ["University of Manchester <suzanne.m.embury@manchester.ac.uk>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
jinja2 = "*"
python-gitlab = ">=4.2.0"
PyYaml = ">=5.1"
pytest = "*"
gitpython = "*"
python-jenkins = "*"
python-dateutil = "*"
bleach = "*"
Markdown = "*"
PyGithub = "*"
loguru = "*"
dateparser = "*"

[tool.poetry.dev-dependencies]
# Add your development dependencies here

[tool.poetry.urls]
Homepage = "https://gitlab.cs.man.ac.uk/institute-of-coding/robota-core"
Issues = "https://gitlab.cs.man.ac.uk/institute-of-coding/robota-core/-/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
